# telegram-cli

./: Cargo.toml  README.md  default.nix  flake.nix  result
.github/workflows/: publish.yml
home-manager/: module.nix
src/: cli.rs  config.rs  main.rs  telegram.rs
