[package]
name = "telegram-cli"
version = "0.1.1"
edition = "2024"
description = "A simple and powerful CLI tool to interact with the Telegram Bot API."
authors = ["1ffycat <1ffycatx@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/1ffycat/telegram-cli"
readme = "README.md"
keywords = ["telegram", "cli", "bot", "api", "tool"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "multipart", "rustls-tls"], default-features = false }
anyhow = "1.0.82"
dirs = "6.0.0"
glob = "0.3.3"